--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude:
 - Gemfile
 - Gemfile.lock
 
-jekyll_get:
+jekyll_get_json:
   data: repos
   json: 'https://api.github.com/users/vinye88/repos'
   cache: true
